--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body{
     display: flex;
     justify-content: center;
     position: relative;
+    font-family: 'Roboto', sans-serif;
 }
 
 .entrada{
@@ -62,22 +63,42 @@ body{
 
 
 .menu-envio{
-    width: 259px;
+    font-family: 'Roboto', sans-serif;
+    width: 70%;
     height: 100%;
     position: absolute;
     background-color:#FFFFFF;
     z-index: 1;
     right: 0;
-    box-shadow: 100px 100px 100px 600px rgba(0, 0, 0, 0.6);
-    display: none;
+    /*box-shadow: 100px 100px 100px 600px rgba(0, 0, 0, 0.6);*/
+}
+
+.participantes{
+    font-size: 16px;
+    padding-left: 18px;
+}
+
+.visibilidade{
+    font-size: 16px;
+    padding-left: 18px;
+}
+
+.escuro{
+    width: 30%;
+    height: 100%;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 2;
 }
 
 .titulo{
-    width: 259px;
+    width: 258px;
     height: 89px;
     display: flex;
     text-align: center;
     align-items: center;
+    font-weight: bold;
+    font-size: 16px;
 }
 
 .titulo2{
@@ -86,6 +107,8 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    font-weight: bold;
+    font-size: 16px;
 }
 
 .topo{
@@ -108,24 +131,43 @@ body{
 
 }
 
+.texto{
+    display: flex;
+    justify-content: space-between;
+}
+
 .bottom{
     height: 80px;
     width: 375px;
     position: absolute;
     bottom: 0;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: space-around;
     padding-left: 18px;
     padding-right: 26px;
     box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.05);
     background-color: #FFFFFF;
 }
 
+.envio{
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    font-weight: lighter;
+    margin-top: 10px;
+}
+
+ion-icon{
+    font-size: 30px;
+    
+}
 
 li{
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    height: 36px;
 }
 
 li>ion-icon {
@@ -135,6 +177,14 @@ li>ion-icon {
 
 li>ion-icon.selecionado{
     opacity: 1;
+    font-size: 20px
+}
+
+.icones {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
 }
 
 .logo{
@@ -149,6 +199,9 @@ li>ion-icon.selecionado{
 
 ::placeholder{
     font-style: italic;
+    font-size: 18px;
+    color: black;
+    
 }
 
 input{
@@ -159,7 +212,7 @@ input{
     font-family: 'Roboto', sans-serif;
     background-color: #FFFFFF;
     width: 375px;
-    height: 40px;
+    min-height: 40px;
     margin: 2px 0;
     display: flex;
     align-items: center;
@@ -182,6 +235,20 @@ input{
     
 }
 
+
+strong{
+    font-weight: bold;
+}
 h2{
     font-weight: bold;
+    word-break: break-all;
+}
+
+
+span{
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+    word-wrap: anywhere;
+    align-items: center;
 }
