Ver 5 - max height e scroll nos participantes

--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,8 @@ body{
 .participantes{
     font-size: 16px;
     padding-left: 18px;
+    max-height: 400px;
+    overflow-y: scroll;
 }
 
 .visibilidade{
